--- a/src/styles/layout/_app-layout.scss
+++ b/src/styles/layout/_app-layout.scss
@@ -6,7 +6,7 @@
     'sidebar topbar'
     'sidebar main';
 }
-.app-sidebar { grid-area: sidebar;  background-color: #0099D2;
+.app-sidebar { grid-area: sidebar;  background-color: #000000;
   color: #fff;}
 
 /* Ensure links inside the sidebar have good contrast and hover/active states */
