--- a/src/styles/components/_loginPage.scss
+++ b/src/styles/components/_loginPage.scss
@@ -1,10 +1,20 @@
 @use '../abstracts/variables' as *;
 
 .login-page{
-  min-width: 100dvh;
+  min-height: 100dvh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
   background: $surface-1;
+  padding: $space-6;
+}
+
+.login-logo{
+  display: block;
+  margin: 0 auto $space-4;
+  height: 64px;
+  width: auto;
+  object-fit: contain;
 }
 
 .login-card{
